# voice-cloning

./: .gitignore  README.md  requirements.txt
backend/: .env.example  api.py  config.py  main.py  pyproject.toml  voice_agent.py
backend/prompts/: default_instructions.md  default_intro.md
chatterbox-demo/: voice_clone_template.py
frontend/: index.html  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: TranscriptionDisplay.tsx  VoiceIndicator.tsx
